Cascading Change Log

2.6.0 [unreleased]

  Updated Janino to 2.7.5.

  Added ability to add more meta information about a c.f.Flow, which can be read and used by a c.m.DocumentService.

  Fixed null handling problem in c.p.a.MaxBy and c.p.a.MinBy.

  Added Java Annotations to c.m.annotation for marking and granting access of custom properties to c.m.DocumentService
  implementations like the Driven plug-in. Instrumented core Operations, SubAssemblies, Taps, and Schemes.

  Updated Apache Hadoop to 2.4.1 in cascading-hadoop2-mr1.

2.5.5

  Added new c.t.p.BasePartitionTap property to control to control the behaviour in case of an Exception while closing a
  c.t.TupleEntryCollector. Setting "cascading.tap.partition.failonclose" to "true" will cause the Exception to be
  rethrown as a c.t.TapException. When set to "false", the default, it will log the error and continue.

  Added custom error reporting for Hadoop standalone mode. The o.a.h.mapred.LocalJobRunner does not return
  o.a.h.mapred.TaskReports which would cause the actual Exception to be lost. c.f.h.FlowMapper and c.f.h.FlowReducer
  will now report the Exception directly to c.f.h.p.HadoopFlowStepJob. This has no influence on Jobs running on a
  real cluster.

  Fixed issue where c.f.h.HadoopFlowStep would not set a o.a.h.mapred.Partitioner that supports custom c.t.Hasher
  implementations during partitioning. c.t.h.u.GroupingPartitioner has been renamed to
  c.t.h.u.GroupingSortingPartitioner and a new c.t.h.u.GroupingPartitioner has been introduced that uses the hashCode
  of the tuples while honoring custom hashers.

  Fixed issue where the ctor of c.t.Fields was not checking the given types for null values.

  Fixed issue where Hadoop credentials could be shared across job submissions and become corrupted
  causing j.i.EOFExceptions.

  Fixed issue where c.t.Fields#resolve() would lose type information with complex selectors.
